--- a/docs/v0.1.0/en/doc/tutorial/project-structure.mdx
+++ b/docs/v0.1.0/en/doc/tutorial/project-structure.mdx
@@ -1,6 +1,6 @@
 # Project Structure
 
-The GenUI project adopts a typical Rust Workspace structure, consisting of multiple sub-projects. The following is a description of the project directory and its functions:
+The GenUI project adopts a typical Rust Workspace structure, consisting of multiple sub-projects. Below is a description of the project directory and its functions:
 
 > [!TIP]
 > The following content symbols are explained:
@@ -8,8 +8,8 @@ The GenUI project adopts a typical Rust Workspace structure, consisting of multi
 > - `[]`: means optional
 > 
 > About file configuration:
-> - `.ract`: [`.ract` configuration]()
-> - `gen_ui.toml`: [`gen_ui.toml` configuration]()
+> - `.ract`: [`.ract` configuration instructions](/doc/config/ract_toml)
+> - `gen_ui.toml`: [`gen_ui.toml` configuration instructions](/doc/config/gen_ui_toml)
 
 
 ```txt title="workspace"
