--- a/docs/v0.1.0/zh/api/option/network.mdx
+++ b/docs/v0.1.0/zh/api/option/network.mdx
@@ -4,7 +4,7 @@
 
 如果您需要在`GenUI`中使用网络请求`(http/https)`需要使用插件`gen_makepad_http`。
 
-> 您可以参考这个例子: [todo待办事项例子](/zh/examples/todo)
+> 您可以参考这个例子: [todo待办事项例子](https://github.com/Privoce/made_with_GenUI/tree/main/todo/todo_front)
 
 ### 使用Ract安装插件
 
