--- a/docs/v0.1.0/zh/doc/tutorial/quick-start.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/quick-start.mdx
@@ -13,7 +13,7 @@ import { Tab, Tabs } from 'rspress/theme';
 
 > [!TIP]
 >
-> 更多Ract详细命令请参照: [Ract](/doc/tutorial/ract)
+> 更多Ract详细命令请参照: [Ract](zh/tools/ract/introduction)
 
 ## 安装并配置Ract
 
