--- a/docs/v0.1.0/en/doc/guide/overview.mdx
+++ b/docs/v0.1.0/en/doc/guide/overview.mdx
@@ -1,37 +1,49 @@
 import MyLinkCard from "@theme/components/LinkCard";
 import Container from "@theme/components/Container";
-import { PrevNextPage } from '@theme';
 
 # Overview
 
 Welcome to the overview page of the GenUI guide! Here, you can quickly understand the core content and learning path of the entire GenUI framework. Whether you are a beginner or a developer with a certain foundation, you can find learning resources suitable for you from the following modules.
+
 <Container>
-    <MyLinkCard
-        href="/doc/guide/overview"
-        title="Guide"
-        description="In the guide section, we have carefully prepared a comprehensive tutorial on the GenUI framework for you. From setting up the development environment to using plugins, to configuring the build tools, each link has detailed step-by-step instructions. Our goal is to help you systematically master the development process of GenUI so that you can avoid detours in the learning process."
-    />
-    <MyLinkCard
-        href="/doc/tutorial/overview"
-        title="Tutorial"
-        description="The tutorial module is the starting point for your GenUI journey. From environment configuration to tool download, from basic syntax to quick start, we will guide you step by step through a series of easy-to-understand examples to gain a deeper understanding of the core functions of GenUI. Through these tutorials, you can not only master the basic operations, but also further consolidate your knowledge through practical projects."
-    />
+  <MyLinkCard
+    href="/doc/guide/overview"
+    title="Guide"
+    description="In the Guide section, we have carefully prepared a comprehensive tutorial on the GenUI framework for you. From setting up the development environment to using plug-ins, to configuring build tools, each link has detailed step-by-step instructions. Our goal is to help you systematically master the development process of GenUI and save you from detours in the learning process."
+  />
+  <MyLinkCard
+    href="/doc/tutorial/overview"
+    title="Tutorial"
+    description="The tutorial module is the starting point for your GenUI journey. From environment configuration to tool download, from basic syntax to quick start, we use a series of easy-to-understand examples to gradually guide you to deeply understand the core functions of GenUI. Through these tutorials, you can not only master the basic operations, but also further consolidate your knowledge through practical projects."
+  />
+</Container>
+<Container>
+  <MyLinkCard
+    href="/doc/config/overview"
+    title="Configuration"
+    description="In the configuration section, we will explain in detail the specific information and configurable items of each configuration file."
+  />
+  <MyLinkCard
+    href="/doc/components/overview"
+    title="Components"
+    description="Documentation for GenUI Builtin Components, which provides all built-in components of the GenUI project. We hope to build it into a modern component library."
+  />
 </Container>
 
 <Container>
-    <MyLinkCard
-        href="/tool"
-        title="Tools"
-        description="GenUI provides an integrated construction tool Ract, which is designed specifically for GenUI and can greatly improve development efficiency. With Ract, you can easily achieve rapid project construction, code optimization, and automated deployment. In addition, we also plan to launch a VSCode plug-in to further improve the development experience (coming soon)."
-    />
-    <MyLinkCard
-        href="/api"
-        title="API"
-        description="API is an indispensable tool in the development process. GenUI provides rich API documentation, covering all aspects from basic bottom-level to advanced functions. These APIs can help you achieve more powerful functions while improving the maintainability and extensibility of the code."
-    />
+  <MyLinkCard
+    href="/tool/overview"
+    title="Tools"
+    description="GenUI provides an integrated construction tool Ract, which is designed specifically for GenUI and can greatly improve development efficiency. With Ract, you can easily achieve rapid project construction, code optimization, and automated deployment. In addition, we also plan to launch a VSCode plug-in to further improve the development experience (coming soon)."
+  />
+  <MyLinkCard
+    href="/api"
+    title="API"
+    description="API is an indispensable tool in the development process. GenUI provides rich API documentation, covering all aspects from basic bottom-level to advanced functions. These APIs can help you achieve more powerful functions while improving the maintainability and extensibility of the code."
+  />
 </Container>
 
-Hopefully the above will help you better understand the GenUI framework. If you have any questions or need further help, please feel free to check out the relevant documentation or contact us.
+Hopefully, the above will help you better understand the GenUI framework. If you have any questions or need further help, please feel free to check out the documentation or contact us.
 
 ## Contact & Feedback
 
