--- a/docs/v0.1.0/en/doc/guide/tools.mdx
+++ b/docs/v0.1.0/en/doc/guide/tools.mdx
@@ -1,34 +1,34 @@
-import { Badge } from '@theme';
+import { Badge } from "@theme";
 
 # Tools
 
 ## Ract
 
 > Github: https://github.com/Privoce/ract
-> 
+>
 > Releases: https://github.com/Privoce/ract/releases
 
-[**Ract**](https://github.com/Privoce/ract)  is a conversational CLI tool written in Rust, designed to simplify the development process by providing an all-in-one solution for:  
+Ract is a conversational CLI tool written in Rust, designed to simplify the development process by providing an all-in-one solution for:
 
-- Integrating dependencies  
-- Setting up environments  
-- Generating project templates  
-- Running and packaging projects  
+- Integrating dependencies
+- Setting up environments
+- Generating project templates
+- Running and packaging projects
 
 With **minimal arguments** and an **intuitive dialog-based interface**, Ract supports frameworks like **GenUI** and **Makepad**, making your development workflow smooth and efficient. 🚀
 
 :::tip
-`Ract` is the first step to start GenUI. Please choose the latest version to download. For Ract usage, please refer to the tutorial: [Ract](en/doc/tutorial/ract/introduction)
+`Ract` is the first step to start GenUI. Please choose the latest version to download. For Ract usage, please refer to the tutorial: [Ract](zh/tools/ract/introduction)
 :::
 
-## VSCode plugin <Badge text="Comming Soon" type="warning" />
+## VSCode plug-in <Badge text="Comming Soon" type="warning" />
 
-GenUI's VSCode plugin, including: code coloring, syntax support, icons, AIGC, version updates, and other functions.
+GenUI's VSCode plug-in, including: code coloring, syntax support, icons, AIGC, version updates, and other functions.
 
 We are actively building...
 
 ## Remote service <Badge text="Comming Soon" type="warning" />
 
-Remote service, including remote packaging, remote project building, AIGC, online code, plugin warehouse, etc. (similar to V0)
+Remote service, including remote packaging, remote project building, AIGC, online code, plug-in warehouse, etc. (similar to V0)
 
 We are actively building...
