fix tool overview url

--- a/docs/v0.1.0/en/doc/guide/overview.mdx
+++ b/docs/v0.1.0/en/doc/guide/overview.mdx
@@ -32,7 +32,7 @@ Welcome to the overview page of the GenUI guide! Here, you can quickly understan
 
 <Container>
   <MyLinkCard
-    href="/tool/overview"
+    href="/tools/overview"
     title="Tools"
     description="GenUI provides an integrated construction tool Ract, which is designed specifically for GenUI and can greatly improve development efficiency. With Ract, you can easily achieve rapid project construction, code optimization, and automated deployment. In addition, we also plan to launch a VSCode plug-in to further improve the development experience (coming soon)."
   />
