--- a/docs/v0.1.0/zh/doc/guide/overview.mdx
+++ b/docs/v0.1.0/zh/doc/guide/overview.mdx
@@ -32,7 +32,7 @@ import Container from "@theme/components/Container";
 
 <Container>
     <MyLinkCard
-        href="/tool/overview"
+        href="/tools/overview"
         title="工具"
         description="GenUI 提供了一体化构建工具 Ract，它专为 GenUI 设计，能够大幅提升开发效率。通过 Ract，您可以轻松实现项目的快速搭建、代码优化以及自动化部署。此外，我们还计划推出 VSCode 插件，进一步完善开发体验（即将上线）。"
     />
