quickstart cargo install

--- a/docs/v0.1.0/en/doc/tutorial/quick-start.mdx
+++ b/docs/v0.1.0/en/doc/tutorial/quick-start.mdx
@@ -23,8 +23,6 @@ This is a quick start example, through which you can quickly understand the deve
 >
 > cratio: https://crates.io/crates/ract
 
-### Configuration
-
 > [!WARNING]
 >
 > Your computer may prompt security issues, please select Allow
@@ -32,6 +30,13 @@ This is a quick start example, through which you can quickly understand the deve
 You can configure ract as a global command in the following ways:
 
 <Tabs>
+    <Tab label="cargo">
+    ```shell
+    cargo install ract
+
+    ract --version
+    ```
+    </Tab>
     <Tab label="Macos | Linux">
         ```shell
         # copy download ract to /usr/local/bin
