wrong word gpiler -> ract

--- a/docs/v0.1.0/en/tools/ract/gen_ui.mdx
+++ b/docs/v0.1.0/en/tools/ract/gen_ui.mdx
@@ -82,7 +82,7 @@ Interactive dialog example:
 ```plaintext
 🥳 Welcome to use ract packager!
 
-🔸 gpiler will check and install `cargo-packager` if not present.
+🔸 ract will check and install `cargo-packager` if not present.
 🔸 Basic packaging configuration is auto-generated.
 ? Select how to package the project: init
 🎉 Package resources have been generated!
