--- a/docs/v0.1.0/en/doc/tutorial/quick-start.mdx
+++ b/docs/v0.1.0/en/doc/tutorial/quick-start.mdx
@@ -9,7 +9,7 @@ This is a quick start example, through which you can quickly understand the deve
 | Name | Version |
 | ---- | ------- |
 | Mac  | -       |
-| Ract | 0.1.0+  |
+| Ract | 0.1.6+  |
 
 > [!TIP]
 >
@@ -19,9 +19,9 @@ This is a quick start example, through which you can quickly understand the deve
 
 `Ract` is the first step in your journey to GenUI, please choose the latest version to download
 
-> Releases: https://github.com/Privoce/ract/releases
+> 👍 crates.io: https://crates.io/crates/ract
 >
-> cratio: https://crates.io/crates/ract
+> Releases: https://github.com/Privoce/ract/releases
 
 > [!WARNING]
 >
