--- a/docs/v0.1.0/zh/doc/tutorial/quick-start.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/quick-start.mdx
@@ -9,7 +9,7 @@ import { Tab, Tabs } from 'rspress/theme';
 |名称|版本|
 |--|--|
 |Mac|-|
-|Ract|0.1.0+|
+|Ract|0.1.6+|
 
 > [!TIP]
 >
@@ -19,9 +19,9 @@ import { Tab, Tabs } from 'rspress/theme';
 
 `Ract`是您开启GenUI之路的第一步，请选择最新的版本进行下载
 
-> Releases: https://github.com/Privoce/ract/releases
+> 👍 crates.io: https://crates.io/crates/ract
 >
-> cratio: https://crates.io/crates/ract
+> Releases: https://github.com/Privoce/ract/releases
 
 > [!WARNING]
 > 
