--- a/docs/v0.1.0/zh/doc/tutorial/template/template_type.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/template/template_type.mdx
@@ -1,12 +1,12 @@
 # 组件类型
 
-这里的组件类型仅仅指静态组件和自定义组件
+这里的组件类型仅仅指内置组件和自定义组件
 
-## 静态组件
+## 内置组件
 
-静态组件指的是在开发时直接可以使用到的无需自己进行二次开发的底层组件，这些底层组件由[GenUI Builtin Components](/zh/components/index)提供。
+内置组件指的是在开发时直接可以使用的，无需自己开发的底层组件，这些底层组件由[GenUI Builtin Components](/zh/components/index)提供。
 
-所有静态组件的属性和回调都是不可更改的并且带有内置类型
+所有内置组件的属性和回调都是不可更改的并且带有内置类型
 
 ## 自定义组件
 
