--- a/docs/v0.1.0/zh/doc/tutorial/template/sugar_syntax.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/template/sugar_syntax.mdx
@@ -27,25 +27,31 @@ import { Badge } from '@theme';
 
 ### 例子
 
+> [!DANGER]
+> 
+> 在使用语法糖时和bind类型一样都需要进行id绑定
+>
+> 我们计划在`v0.1.3`版本引入自动id策略 (在静态编译时为每个没有添加id的组件自动生成id)
+
 #### 单个
 
 ```html
-<label :for="item in label_list" :text="item"></label>
+<label id="mv_label" :for="item in label_list" :text="item"></label>
 ```
 
 #### 嵌套引用
 
 ```html
-<view :for="item in label_list">
-    <label :text="item"></label>
+<view id="my_view" :for="item in label_list">
+    <label id="mv_label" :text="item"></label>
 </view>
 ```
 
 #### 嵌套for
 
 ```html
-<view :for="(index, item) in label_list">
-    <label :for="item1 in item[index]" :text="item1"></label>
+<view id="mv_view" :for="(index, item) in label_list">
+    <label id="mv_label" :for="item1 in item[index]" :text="item1"></label>
 </view>
 ```
 
